terraform/environments/eks/argo-workflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
  labels:
    app.kubernetes.io/name: argo
    app.kubernetes.io/part-of: argo-workflows
